tests/recursive_defs/recursive_defs.exp
Error --------------------------------------------------------------------------------------------------- fileA1.js:16:2

Cannot cast `data.propA` to empty because `$ReadOnly` [1] is incompatible with empty [2]. [incompatible-cast]

   fileA1.js:16:2
   16| (data.propA: empty); // error obj ~> empty
        ^^^^^^^^^^

References:
   fileA1.js:6:10
    6|   propA: Data,
                ^^^^ [1]
   fileA1.js:16:14
   16| (data.propA: empty); // error obj ~> empty
                    ^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- fileA1.js:16:2

Cannot cast `data.propA` to empty because object type [1] is incompatible with empty [2]. [incompatible-cast]

   fileA1.js:16:2
   16| (data.propA: empty); // error obj ~> empty
        ^^^^^^^^^^

References:
   fileA1.js:6:10
    6|   propA: Data,
                ^^^^ [1]
   fileA1.js:16:14
   16| (data.propA: empty); // error obj ~> empty
                    ^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- fileB1.js:16:2

Cannot cast `data.propA` to empty because `$ReadOnly` [1] is incompatible with empty [2]. [incompatible-cast]

   fileB1.js:16:2
   16| (data.propA: empty); // error obj ~> empty
        ^^^^^^^^^^

References:
   fileB1.js:6:10
    6|   propA: Data,
                ^^^^ [1]
   fileB1.js:16:14
   16| (data.propA: empty); // error obj ~> empty
                    ^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- fileB1.js:16:2

Cannot cast `data.propA` to empty because object type [1] is incompatible with empty [2]. [incompatible-cast]

   fileB1.js:16:2
   16| (data.propA: empty); // error obj ~> empty
        ^^^^^^^^^^

References:
   fileB1.js:6:10
    6|   propA: Data,
                ^^^^ [1]
   fileB1.js:16:14
   16| (data.propA: empty); // error obj ~> empty
                    ^^^^^ [2]



Found 4 errors
